--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                     <a href="settings.html" class="block px-4 py-2 hover:bg-white/10"> Setting</a> <a
                         href="favorites.html" class="block px-4 py-2 hover:bg-white/10">❤️ Favorites</a> <a href="#"
                         class="block px-4 py-2 hover:bg-white/10">🔐 Account</a> <button id="mode-toggle"
-                        class="w-full text-left px-4 py-2 hover:bg-white/10">🌗 Toggle Theme</button> </div>
+                        class="w-full text-left px-4 py-2 hover:bg-white/10">🌗 Toggle Theme</button>
+                </div>
             </div>
         </div>
         <div class="sm:hidden px-4 pb-3"> <input id="search-mobile" type="search" placeholder="Search..."
@@ -150,37 +151,88 @@
             <div id="upcoming-container" class="flex gap-5 overflow-x-auto scrollbar-hide snap-x snap-mandatory"></div>
         </section>
     </div> <!-- Footer -->
-    <footer class="bg-black py-10 px-6 border-t border-gray-800">
-        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 text-gray-400">
+    <!-- 🌟 Final Futuristic Footer -->
+    <footer class="bg-black text-gray-300 mt-20 relative overflow-hidden">
+
+        <!-- Background Accent Glow -->
+        <div class="absolute inset-0 opacity-10 bg-gradient-to-r from-cyan-500 via-purple-500 to-pink-500 blur-3xl">
+        </div>
+
+        <!-- Top Strip -->
+        <div
+            class="relative z-10 border-b border-gray-800 py-6 flex flex-col md:flex-row items-center justify-between gap-4 px-6 max-w-7xl mx-auto">
+            <h2 class="text-2xl font-extrabold tracking-wide text-white">
+                <a href="index.html" class="text-lg sm:text-2xl md:text-3xl font-extrabold neon">AZHAN Movies</a>
+            </h2>
+            <nav class="flex gap-6 text-sm">
+                <a href="index.html" class="hover:text-cyan-400 transition">Home</a>
+                <a href="movie.html" class="hover:text-cyan-400 transition">Movies</a>
+                <a href="watch.html" class="hover:text-cyan-400 transition">Watch</a>
+                <a href="#" class="hover:text-cyan-400 transition">Contact</a>
+            </nav>
+        </div>
+
+        <!-- Middle Strip (3 Columns) -->
+        <div class="relative z-10 grid grid-cols-1 sm:grid-cols-3 gap-10 py-12 px-6 max-w-7xl mx-auto">
+
+            <!-- About -->
             <div>
-                <h2 class="text-xl font-bold text-white mb-2">AZHAN Movies</h2>
-                <p>The ultimate streaming universe.</p>
+                <h3 class="text-white font-semibold mb-3">About Us</h3>
+                <p class="text-sm text-gray-400 leading-relaxed">
+                    AZHAN Movies is your futuristic movie hub. Explore trending, popular, and the latest releases from
+                    Hollywood, Bollywood, Pakistani cinema, and Anime — all in one place.
+                </p>
             </div>
+
+            <!-- Categories -->
             <div>
-                <h2 class="text-lg font-semibold text-white mb-2">Explore</h2>
-                <ul class="space-y-1">
-                    <li><a href="#" class="hover:text-white">Home</a></li>
-                    <li><a href="#" class="hover:text-white">Categories</a></li>
+                <h3 class="text-white font-semibold mb-3">Categories</h3>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="#" class="hover:text-cyan-400 transition">Hollywood</a></li>
+                    <li><a href="#" class="hover:text-cyan-400 transition">Bollywood</a></li>
+                    <li><a href="#" class="hover:text-cyan-400 transition">Pakistani</a></li>
+                    <li><a href="#" class="hover:text-cyan-400 transition">Anime</a></li>
                 </ul>
             </div>
+
+            <!-- Newsletter -->
             <div>
-                <h2 class="text-lg font-semibold text-white mb-2">Stay Updated</h2> <input type="email"
-                    placeholder="Email"
-                    class="w-full px-3 py-2 rounded bg-zinc-900 text-white placeholder-gray-500 border border-gray-600" />
-                <button
-                    class="mt-3 w-full py-2 bg-gradient-to-r from-pink-500 to-fuchsia-500 rounded text-white font-semibold hover:brightness-110">
-                    Subscribe </button>
-            </div>
-            <div>
-                <h2 class="text-lg font-semibold text-white mb-2">Follow Us</h2>
-                <div class="flex gap-4 text-xl"> <a href="#" class="hover:text-blue-500"><i
-                            class="fab fa-facebook"></i></a> <a href="#" class="hover:text-pink-500"><i
-                            class="fab fa-instagram"></i></a> <a href="#" class="hover:text-blue-400"><i
-                            class="fab fa-twitter"></i></a> </div>
+                <h3 class="text-white font-semibold mb-3">Stay Updated</h3>
+                <p class="text-sm text-gray-400 mb-3">Subscribe for the latest movie updates.</p>
+                <form class="flex">
+                    <input type="email" placeholder="Enter your email"
+                        class="w-full px-3 py-2 rounded-l-lg bg-gray-800 text-sm focus:outline-none focus:ring-1 focus:ring-cyan-400">
+                    <button
+                        class="px-4 py-2 bg-gradient-to-r from-cyan-500 to-pink-500 text-white text-sm rounded-r-lg hover:opacity-90">Join</button>
+                </form>
             </div>
         </div>
-        <div class="text-center text-sm text-gray-600 mt-10">&copy; 2025 AZHAN Movies. All rights reserved.</div>
-    </footer> <!-- JS -->
+
+        <!-- Social Links -->
+        <div class="relative z-10 flex justify-center space-x-6 py-4">
+            <a href="#" class="hover:text-cyan-400 transition">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="hover:text-cyan-400 transition">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="hover:text-cyan-400 transition">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="#" class="hover:text-cyan-400 transition">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </div>
+
+        <!-- Bottom Strip -->
+        <div class="relative z-10 border-t border-gray-800 py-4 text-center text-xs text-gray-500">
+            © 2025 <span class="text-white font-semibold">AZHAN Movies</span> • Designed with ❤️ for movie lovers
+        </div>
+    </footer>
+
+    <!-- Font Awesome for Social Icons -->
+    <script src="https://kit.fontawesome.com/yourkitid.js" crossorigin="anonymous"></script>
+    <!-- JS -->
     <script src="app.js"></script>
 </body>
 
