--- a/favorites.html
+++ b/favorites.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -9,14 +9,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <style>
         body {
-            background: radial-gradient(ellipse at center, #0f0f0f 0%, #000000 100%);
-            color: white;
+            background: #000;
+            color: #fff;
+            font-family: 'Poppins', sans-serif;
+            transition: background 0.3s, color 0.3s;
         }
 
+        body.light-mode {
+            background: #f5f5f5;
+            color: #111;
+        }
+
+        /* Navbar */
         .glass {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(0, 0, 0, 0.6);
             backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.08);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: background 0.3s, color 0.3s;
+        }
+
+        body.light-mode .glass {
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            color: #111;
         }
 
         .neon {
@@ -25,103 +40,194 @@
             -webkit-text-fill-color: transparent;
         }
 
-        body.light-mode {
-            background: #f0f0f0;
+        input {
+            transition: background 0.3s, color 0.3s, border-color 0.3s;
+        }
+
+        body.light-mode input {
+            background: #fff;
+            color: #111;
+            border-color: #ff66cc;
+        }
+
+        /* Movie Cards */
+        .poster-card {
+            position: relative;
+            overflow: hidden;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            aspect-ratio: 16 / 9;
+        }
+
+        .poster-card img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .poster-card:hover img {
+            transform: scale(1.08);
+        }
+
+        .poster-overlay {
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0));
+            opacity: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            padding: 1rem;
+            transition: opacity 0.3s ease;
+        }
+
+        .poster-card:hover .poster-overlay {
+            opacity: 1;
+        }
+
+        body.light-mode .poster-overlay {
+            background: linear-gradient(to top, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0));
+        }
+
+        .poster-overlay h2 {
+            font-size: 1rem;
+            font-weight: bold;
+            margin-bottom: 0.25rem;
+            color: #fff;
+        }
+
+        body.light-mode .poster-overlay h2 {
             color: #111;
         }
 
-        body.light-mode .glass {
-            background: rgba(0, 0, 0, 0.06);
-            color: black;
+        .poster-overlay .actions {
+            display: flex;
+            gap: 0.5rem;
+            margin-top: 0.5rem;
         }
 
-        body.light-mode .text-white {
-            color: black !important;
+        .poster-overlay .actions button {
+            background: rgba(255, 255, 255, 0.15);
+            border: none;
+            padding: 0.4rem 0.7rem;
+            font-size: 0.8rem;
+            border-radius: 0.25rem;
+            transition: background 0.3s, color 0.3s;
         }
 
-        .scrollbar-hide::-webkit-scrollbar {
-            display: none;
+        .poster-overlay .actions button:hover {
+            background: #e50914;
+            color: #fff;
         }
 
-        .scrollbar-hide {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
+        body.light-mode .poster-overlay .actions button {
+            background: rgba(0, 0, 0, 0.05);
+            color: #111;
+        }
+
+        body.light-mode .poster-overlay .actions button:hover {
+            background: #ff4c4c;
+            color: #fff;
         }
     </style>
 </head>
 
-<body class="text-white font-sans">
-
+<body>
     <!-- Navbar -->
-    <nav class="glass sticky top-0 z-50 w-full shadow-lg">
-        <div class="max-w-7xl mx-auto flex justify-between items-center px-6 h-20">
-            <a href="index.html" class="text-3xl font-extrabold neon">AZHAN Movies</a>
-            <div class="flex items-center gap-4">
-                <h2 class="text-xl font-semibold text-pink-400">Favorites</h2>
-                <a href="settings.html" class="text-xl hover:text-cyan-400 transition" title="Settings">
-                    <i class="fas fa-cog"></i>
-                </a>
+    <nav class="glass sticky top-0 z-50 w-full shadow-md">
+        <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3 md:px-6">
+            <a href="index.html" class="text-lg sm:text-2xl md:text-3xl font-extrabold neon">AZHAN Movies</a>
+            <div class="hidden sm:flex flex-1 mx-4">
+                <input id="search" type="search" placeholder="Search..."
+                    class="w-full px-4 py-2 rounded-full bg-black text-white border border-pink-500 placeholder-pink-500 focus:outline-none focus:ring-2 focus:ring-pink-600" />
             </div>
+            <div class="relative">
+                <button id="menu-toggle" class="text-2xl hover:text-pink-400 transition"><i
+                        class="fas fa-bars"></i></button>
+                <div id="dropdown-menu"
+                    class="absolute right-0 mt-3 w-48 bg-black rounded-lg shadow-lg py-2 hidden z-50 text-sm text-white">
+                    <a href="settings.html"
+                        class="block px-4 py-2 hover:bg-white/10 hover:text-pink-400 transition">Settings</a>
+                    <a href="favorites.html" class="block px-4 py-2 hover:bg-white/10 hover:text-pink-400 transition">❤️
+                        Favorites</a>
+                    <a href="#" class="block px-4 py-2 hover:bg-white/10 hover:text-pink-400 transition">🔐 Account</a>
+                    <button id="mode-toggle"
+                        class="w-full text-left px-4 py-2 hover:bg-white/10 hover:text-pink-400 transition">🌗 Toggle
+                        Theme</button>
+                </div>
+            </div>
+        </div>
+        <div class="sm:hidden px-4 pb-3">
+            <input id="search-mobile" type="search" placeholder="Search..."
+                class="w-full px-4 py-2 rounded-full bg-black text-white border border-pink-400 placeholder-pink-400 focus:outline-none focus:ring-2 focus:ring-pink-600" />
         </div>
     </nav>
 
     <!-- Favorite Movies -->
     <main class="px-6 py-10">
-        <h3 class="text-2xl font-bold mb-6 text-pink-400">Your Favorite Movies</h3>
-        <div id="favorite-container" class="flex overflow-x-auto gap-4 scrollbar-hide"></div>
-        <p id="no-favorites" class="text-center text-gray-400 mt-10 hidden">No favorite movies yet.</p>
+        <h3 class="text-xl font-bold mb-6 text-red-600">Your Favorite Movies</h3>
+        <div id="favorite-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"></div>
+        <div id="no-favorites" class="hidden text-center mt-20">
+            <p class="text-gray-400 text-lg mb-4">No favorite movies yet.</p>
+            <a href="index.html"
+                class="px-4 py-2 bg-red-600 hover:bg-red-700 rounded-md text-white font-semibold">Browse Movies</a>
+        </div>
     </main>
 
     <script>
+        // Navbar functionality
+        const menuToggle = document.getElementById("menu-toggle");
+        const dropdownMenu = document.getElementById("dropdown-menu");
+        const modeToggle = document.getElementById("mode-toggle");
+
+        menuToggle.addEventListener("click", () => { dropdownMenu.classList.toggle("hidden"); });
+        document.addEventListener("click", e => {
+            if (!menuToggle.contains(e.target) && !dropdownMenu.contains(e.target)) dropdownMenu.classList.add("hidden");
+        });
+
+        // Theme toggle
+        modeToggle.addEventListener("click", () => {
+            document.body.classList.toggle("light-mode");
+            localStorage.setItem("theme", document.body.classList.contains("light-mode") ? "light" : "dark");
+        });
+        if (localStorage.getItem("theme") === "light") document.body.classList.add("light-mode");
+
+        // Favorites
         const container = document.getElementById('favorite-container');
         const noFav = document.getElementById('no-favorites');
         let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
 
         function renderFavorites() {
             container.innerHTML = "";
-            if (favorites.length === 0) {
-                noFav.classList.remove('hidden');
-                return;
-            } else {
-                noFav.classList.add('hidden');
-            }
+            if (favorites.length === 0) { noFav.classList.remove('hidden'); return; } else { noFav.classList.add('hidden'); }
 
             favorites.forEach((movie, index) => {
-                const poster = movie.poster_path
-                    ? `https://image.tmdb.org/t/p/w300${movie.poster_path}`
-                    : 'https://via.placeholder.com/300x300?text=No+Image';
-
+                const poster = movie.poster_path ? `https://image.tmdb.org/t/p/w500${movie.poster_path}` : 'https://via.placeholder.com/640x360?text=No+Image';
                 const card = document.createElement('div');
-                card.className = `glass w-[200px] flex-shrink-0 rounded-xl overflow-hidden hover:scale-105 transition`;
-
+                card.className = "poster-card";
                 card.innerHTML = `
-          <img src="${poster}" alt="${movie.title}" class="w-full h-[220px] object-cover" />
-          <div class="p-3 flex flex-col gap-2 text-center">
-            <h2 class="text-sm font-bold text-pink-400 truncate">${movie.title}</h2>
-            <div class="text-xs text-gray-400">${movie.release_date || 'No date'} • ⭐ ${movie.vote_average}</div>
-            <div class="flex flex-col gap-1">
-              <button class="detail-btn py-1 bg-gradient-to-r from-fuchsia-600 to-pink-500 rounded-full text-xs">Details</button>
-              <button class="watch-now-btn py-1 bg-gradient-to-r from-cyan-500 to-emerald-500 rounded-full text-xs">Watch</button>
-              <button class="remove-btn mt-1 py-1 bg-red-600 hover:bg-red-700 rounded-full text-xs">Unfavorite</button>
+          <img src="${poster}" alt="${movie.title}" />
+          <div class="poster-overlay">
+            <h2>${movie.title}</h2>
+            <p class="text-xs text-gray-300">${movie.release_date || 'No date'} • ⭐ ${movie.vote_average}</p>
+            <div class="actions">
+              <button onclick="window.location.href='movie.html?id=${movie.id}'">Details</button>
+              <button onclick="window.location.href='watch.html?id=${movie.id}'">Watch</button>
+              <button class="remove-btn">Remove</button>
             </div>
           </div>
         `;
-
                 card.querySelector('.remove-btn').addEventListener('click', () => {
                     favorites.splice(index, 1);
                     localStorage.setItem('favorites', JSON.stringify(favorites));
                     renderFavorites();
                 });
-
                 container.appendChild(card);
             });
         }
-
         renderFavorites();
-
-        if (localStorage.getItem('theme') === 'light') {
-            document.body.classList.add('light-mode');
-        }
     </script>
 </body>
 
