some small changes

--- a/movie.html
+++ b/movie.html
@@ -149,7 +149,7 @@
     </style>
 </head>
 
-<body class="font-sans min-h-screen px-4 md:px-6 text-white">
+<body class="font-sans min-h-screen text-white">
 
     <!-- 🌗 Theme Toggle Button -->
     <button class="theme-toggle" onclick="toggleTheme()">🌗 Toggle Theme</button>
@@ -176,7 +176,7 @@
         <div id="cast-section" class="flex overflow-x-auto gap-3 pb-3 scrollbar-hide"></div>
     </section>
     <!-- 🌟 Final Futuristic Footer -->
-    <footer class="bg-black text-gray-300 mt-20 relative overflow-hidden">
+    <footer class="bg-black text-gray-300 mt-20 relative overflow-hidden p-0">
 
         <!-- Background Accent Glow -->
         <div class="absolute inset-0 opacity-10 bg-gradient-to-r from-cyan-500 via-purple-500 to-pink-500 blur-3xl">
